# MedDocAn

./: .buildinfo  .coveragerc  .gitignore  CONTRIBUTING.md  LICENSE  README.md  appendix.md  genindex.html  index.html  mypy.ini  objects.inv  pyproject.toml  search.html  searchindex.js  streamlit_app.py
.github/workflows/: test.yml
_sources/meddocan/: 01_evaluation_notebook.ipynb  02_data_notebook.ipynb  02_data_notebook.md  03_training_notebook.ipynb  a.md  a_code.ipynb  a_training_notebook.ipynb  a_transfer_learning.md  a_transformers.ipynb
application/: app.py  model.py  samples.py  visualizer.py
cdti/: _config.yml  _toc.yml  intro.md  references.bib
cdti/meddocan/: 01_evaluation.md  01_evaluation_notebook.ipynb  01_evaluation_notebook.md  02_data.md  02_data_notebook.ipynb  03_results_dev.ipynb  03_results_test.ipynb  03_training.md  03_training_notebook.ipynb  03_training_notebook.md  03_training_notebook_parameters.ipynb  a.md  a_code.ipynb  a_code.md  a_training.md  a_training_notebook.md  a_transfer_learning.md  a_transformers.ipynb  a_transformers.md  appendix.md  appendix_notebook.ipynb  bibliography.md  code.ipynb  code.md  transformers.ipynb
continuous_split/: tensorboard.ipynb  tokenizer.ipynb  window.ipynb
developpement/: brat_containers.py  corpus.py
docs/: intro.md  references.bib
docs/meddocan/: 01_evaluation.md  03_training.md  03_training_notebook_parameters.ipynb
docs/source/: conf.py  index.rst  meddocan.rst  modules.rst
experiments/: error_analysis.ipynb  error_analysis.py  results.ipynb  results_dev.ipynb
experiments/corpus_sentence_bert_context_finetune/: get_metrics.py  param_selection.txt  training.sh  training_seed_1.py  training_seed_12.py  training_seed_33.py
experiments/corpus_sentence_bert_context_lstm_crf/: code.sh  code_1.py  code_12.py  code_33.py  get_metrics.py  param_selection.txt
experiments/corpus_sentence_bert_context_we_finetune/: code_1.py  code_12.py  code_33.py  get_metrics.py  training.sh
experiments/corpus_sentence_bert_context_we_finetune_it_150/: code_1.py  code_12.py  code_33.py  get_metrics.py  param_selection.txt  training.sh
experiments/corpus_sentence_bert_context_we_finetune_it_40/: code_12.py  code_33.py  param_selection.txt
experiments/corpus_sentence_bert_context_we_lstm_crf/: code.sh  code_1.py  code_12.py  code_33.py  get_metrics.py  param_selection.txt
experiments/corpus_sentence_bert_finetune/: get_metrics.py  param_selection.txt  training.sh  training_seed_1.py  training_seed_12.py
experiments/corpus_sentence_bert_finetune_it_150/: get_metrics.py  param_selection.txt  training.sh  training_seed_1.py  training_seed_12.py  training_seed_33.py
experiments/corpus_sentence_bert_finetune_it_40/: training_seed_33.py
experiments/corpus_sentence_bert_lstm_crf/: code.sh  code_1.py  code_12.py  code_33.py  get_metrics.py  param_selection.txt
experiments/corpus_sentence_bert_we_finetune/: code_1.py  code_12.py  code_33.py
experiments/corpus_sentence_bert_we_finetune_it_150/: code_1.py  code_12.py  code_33.py  get_metrics.py  param_selection.txt  training.sh
experiments/corpus_sentence_bert_we_finetune_it_40/: code_12.py  code_33.py  get_metrics.py  param_selection.txt  training.sh
experiments/corpus_sentence_bert_we_lstm_crf/: code.sh  code_1.py  code_12.py  (+3 more)
meddocan/: 01_evaluation.html  01_evaluation_notebook.html  02_data.html  02_data_notebook.html  03_training.html  03_training_notebook.html  __init__.py  __main__.py  a.html  a_code.html  a_training.html  a_training_notebook.html  a_transfer_learning.html  a_transformers.html  bibliography.html  evaluation.py
presentation/: cdti.ipynb  model_parameters.py  presentation.ipynb  utils.py
scripts/: cdti-pdf.sh  cdti-presentation.sh  cdti-publish.sh  cdti.sh  docs.sh  format-import.sh  format.sh  lint.sh  serve.sh  test-cov.sh  test-doctest.sh  test_files.sh
tests/: conftest.py  test_entry_points.py  test_meddocan.py
(+159 files in other folders)
